Bug 968118. Make nsCSSProps keyword tables be int16_t instead of int32_t for a small space win. r=heycam