layout/style/nsMediaFeatures.h
@@ -9,6 +9,7 @@
 #define nsMediaFeatures_h_
 
 #include "nsError.h"
+#include "nsCSSProps.h"
 
 class nsIAtom;
 class nsPresContext;
@@ -53,7 +54,7 @@ struct nsMediaFeature {
       const void* mInitializer_;
       // If mValueType == eEnumerated:  const int32_t*: keyword table in
       //   the same format as the keyword tables in nsCSSProps.
-      const int32_t* mKeywordTable;
+      const nsCSSProps::KTableValue* mKeywordTable;
       // If mGetter == GetSystemMetric (which implies mValueType ==
       //   eBoolInteger): nsIAtom * const *, for the system metric.
       nsIAtom * const * mMetric;
